--- a/TourPlanner.UI/Theme/FormFieldTheme.xaml
+++ b/TourPlanner.UI/Theme/FormFieldTheme.xaml
@@ -2,11 +2,55 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Style x:Key="FormFieldStyle"
            TargetType="TextBox">
-        <Setter Property="Foreground" Value="Black"/>
-        <Setter Property="FontFamily" Value="/Resources/Fonts/#Montserrat"/>
-        <Setter Property="FontSize" Value="16"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Margin" Value="5,0,5,5"/>
-        <Setter Property="Padding" Value="5"/>
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Margin" Value="5,0,5,5" />
+        <Setter Property="Padding" Value="5" />
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="BorderBrush" Value="Red" />
+                <Setter Property="BorderThickness" Value="2" />
+                <Setter Property="ToolTip"
+                        Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
+                                        RelativeSource={RelativeSource Self}}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <!-- Für Slider -->
+    <Style x:Key="FormSliderFieldStyle"
+           TargetType="Slider">
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="Margin" Value="5,0,5,5" />
+        <Setter Property="Background" Value="#FFF" />
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="BorderBrush" Value="Red" />
+                <Setter Property="BorderThickness" Value="2" />
+                <Setter Property="ToolTip"
+                        Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
+                                        RelativeSource={RelativeSource Self}}" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+
+    <!-- DatePicker Border -->
+    <Style x:Key="FormDatePickerFieldStyle"
+           TargetType="DatePicker">
+        <Setter Property="Foreground" Value="Black" />
+        <Setter Property="FontFamily" Value="/UI/Resources/Fonts/#Montserrat" />
+        <Setter Property="FontSize" Value="16" />
+        <Setter Property="Margin" Value="5,0,5,5" />
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="BorderBrush" Value="Red" />
+                <Setter Property="BorderThickness" Value="2" />
+                <Setter Property="ToolTip"
+                        Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
+                                        RelativeSource={RelativeSource Self}}" />
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
