--- a/TourPlanner.UI/Views/TourLogsManagement.xaml
+++ b/TourPlanner.UI/Views/TourLogsManagement.xaml
@@ -27,17 +27,23 @@
                 </Grid.ColumnDefinitions>
             
                 <TextBlock Text="Tour Logs"
-                   Margin="10"
-                   Foreground="Black"
-                   FontSize="18"
-                   FontFamily="/Resources/Fonts/#Montserrat"
-                   FontWeight="Medium"
-                   VerticalAlignment="Center"/>
-                
+                           Margin="10"
+                           Foreground="Black"
+                           FontSize="18"
+                           FontFamily="/Resources/Fonts/#Montserrat"
+                           FontWeight="Medium"
+                           VerticalAlignment="Center"/>
+
+                <!-- Search Bar -->
+                <views:SearchBar Grid.Column="1"
+                                 DataContext="{Binding SearchBarViewModel}"
+                                 Margin="5"
+                                 Padding="5"/>
+
                 <StackPanel Grid.Column="2"
-                           Orientation="Horizontal"
-                           HorizontalAlignment="Right"
-                           Margin="5,0">
+                            Orientation="Horizontal"
+                            HorizontalAlignment="Right"
+                            Margin="5,0">
                     <Button Content="+"
                             Style="{StaticResource ActionButtonStyle}"
                             Margin="2,0"
@@ -56,7 +62,7 @@
             
             <!--- Tour Logs Table -->
             <views:TourLogList Grid.Row="1"
-                           DataContext="{Binding TourLogListViewModel}"/>
+                               DataContext="{Binding TourLogListViewModel}"/>
         </Grid>
     </Border>
 </UserControl>
