--- a/TourPlanner.UI/Views/CreateTour.xaml
+++ b/TourPlanner.UI/Views/CreateTour.xaml
@@ -49,30 +49,32 @@
                     <TextBox x:Name="name"
                              Style="{StaticResource FormFieldStyle}"
                              Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
-
+                    <TextBlock Text="{Binding NameError}" Foreground="Red" FontSize="12" />
+                    
                     <!-- Tour Date -->
                     <TextBlock Text="Date"
                                Style="{StaticResource FormTextBoxStyle}"/>
 
                     <DatePicker x:Name="date"
-                                FontSize="16"
-                                FontFamily="/Resources/Fonts/#Montserrat"
-                                VerticalContentAlignment="Center"
-                                Height="30"
-                                Margin="5,0,5,5"
-                                SelectedDate="{Binding Date, UpdateSourceTrigger=PropertyChanged}"/>
-
+                                Style="{StaticResource FormDatePickerFieldStyle}"
+                                SelectedDate="{Binding Date, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, NotifyOnValidationError=True}"/>
+                    <TextBlock Text="{Binding DateError}" Foreground="Red" FontSize="12" />
+                    
                     <!-- Tour Description -->
                     <TextBlock Text="Description"
                                Style="{StaticResource FormTextBoxStyle}"/>
 
                     <TextBox x:Name="Description"
-                             Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"
+                             Text="{Binding Description, 
+                                    UpdateSourceTrigger=PropertyChanged, 
+                                    ValidatesOnDataErrors=True, 
+                                    NotifyOnValidationError=True}" 
                              Style="{StaticResource FormFieldStyle}"
                              AcceptsReturn="True"
                              TextWrapping="Wrap"
                              VerticalScrollBarVisibility="Auto"
                              MinHeight="100"/>
+                    <TextBlock Text="{Binding DescriptionError}" Foreground="Red" FontSize="12" />
                 </StackPanel>
 
                 <Grid Grid.Column="1">
@@ -97,24 +99,35 @@
                                   VerticalContentAlignment="Center"
                                   Margin="5,0,5,5"
                                   ItemsSource="{Binding TransportTypeOptions}"
-                                  SelectedItem="{Binding TransportType, UpdateSourceTrigger=PropertyChanged}">
-                        </ComboBox>
-
+                                  SelectedItem="{Binding TransportType, 
+                                                    UpdateSourceTrigger=PropertyChanged, 
+                                                    ValidatesOnDataErrors=True, 
+                                                    NotifyOnValidationError=True}"/>
+                        <TextBlock Text="{Binding TransportTypeError}" Foreground="Red" FontSize="12" />
+                        
                         <!-- Tour Starting Point -->
                         <TextBlock Text="From"
                                Style="{StaticResource FormTextBoxStyle}"/>
 
                         <TextBox x:Name="from"
-                             Text="{Binding From, UpdateSourceTrigger=PropertyChanged}"
-                             Style="{StaticResource FormFieldStyle}"/>
-
+                                 Text="{Binding From, 
+                                        UpdateSourceTrigger=PropertyChanged, 
+                                        ValidatesOnDataErrors=True, 
+                                        NotifyOnValidationError=True}"
+                                 Style="{StaticResource FormFieldStyle}"/>
+                        <TextBlock Text="{Binding FromError}" Foreground="Red" FontSize="12" />
+                        
                         <!-- Tour Destination -->
                         <TextBlock Text="To"
                                Style="{StaticResource FormTextBoxStyle}"/>
 
                         <TextBox x:Name="to"
-                             Text="{Binding To, UpdateSourceTrigger=PropertyChanged}"
+                                 Text="{Binding To, 
+                                        UpdateSourceTrigger=PropertyChanged, 
+                                        ValidatesOnDataErrors=True, 
+                                        NotifyOnValidationError=True}"
                              Style="{StaticResource FormFieldStyle}"/>
+                        <TextBlock Text="{Binding ToError}" Foreground="Red" FontSize="12" />
                     </StackPanel>
 
                     <StackPanel Grid.Row="1"
