--- a/TourPlanner.UI/Theme/FormFieldTheme.xaml
+++ b/TourPlanner.UI/Theme/FormFieldTheme.xaml
@@ -8,5 +8,14 @@
         <Setter Property="VerticalAlignment" Value="Center"/>
         <Setter Property="Margin" Value="5,0,5,5"/>
         <Setter Property="Padding" Value="5"/>
+        <Style.Triggers>
+            <Trigger Property="Validation.HasError" Value="True">
+                <Setter Property="BorderBrush" Value="Red"/>
+                <Setter Property="BorderThickness" Value="2"/>
+                <Setter Property="ToolTip"
+                        Value="{Binding Path=(Validation.Errors)[0].ErrorContent,
+                                        RelativeSource={RelativeSource Self}}"/>
+            </Trigger>
+        </Style.Triggers>
     </Style>
 </ResourceDictionary>
